ENH: initial commit - porting progress over from branch on tabulator repo to fork

--- a/src/scss/themes/bootstrap/tabulator_bootstrap4.scss
+++ b/src/scss/themes/bootstrap/tabulator_bootstrap4.scss
@@ -476,6 +476,14 @@ $table-cell-padding-sm: 5px;
 				}
 			}
 		}
+
+		&.tabulator-selectable.tabulator-selected{
+			background-color: $rowSelectedBackground;
+		}
+
+		&.tabulator-selectable.tabulator-selected:hover{
+			background-color: $rowSelectedBackgroundHover;
+		}
 	}
 
 	&.tabulator-group{
